Verification pass: fix Java truncation, rewrite entrypoint and CHANGES via heredoc, parse-check all configs